# nextsv

./: CHANGELOG.md  CHANGES.md  Cargo.toml  README.md  SECURITY.md  TEST.md  build.rs  cliff.toml  release.toml
.circleci/: config.yml
.github/workflows/: fossa.yml  rust_security_audit.yml  scorecards-analysis.yml  scorecards.yml
src/: calculator.rs  conventional.rs  error.rs  lib.rs  main.rs  nextsv.rs  semantic.rs  version_tag.rs
src/nextsv/: error.rs
tests/cmd/: help.trycmd
