[package]
name = "nextsv"
version = "0.3.1"
edition = "2021"
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version = "1.56"
description = "Next semantic version calculator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jerusdp/nextsv"
keywords = ["semantic", "version", "calculator"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGES.md",
]

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
git-conventional = "0.11.3"
git2 = "0.14.4"
thiserror = "1.0"

[dev-dependencies]
claim = "0.5"

[lib]
name = "nextsv_lib"
path = "src/lib.rs"

[[bin]]
name = "nextsv"
path = "src/main.rs"

[features]
default=["version", "level"]
version =[]
level = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
