[package]
name = "nextsv"
version = "0.7.3"
edition = "2021"
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version = "1.60"
description = "Next semantic version calculator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jerusdp/nextsv"
keywords = ["semantic", "version", "calculator"]
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE", "CHANGES.md"]

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.9.3"
git-conventional = "0.12.0"
git2 = "0.15.0"
log = "0.4.17"
thiserror = "1.0"

[dev-dependencies]
claim = "0.5"
trycmd = "0.14.1"

[lib]
name = "nextsv"
path = "src/lib.rs"

[[bin]]
name = "nextsv"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
